charts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: kubernetes-for-devs
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$3
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: song-service
              port:
                number: 8080
          path: /api/v1/(songs)(/|$)(.*)
          pathType: Prefix
    - http:
        paths:
        - backend:
            service:
              name: resource-service
              port:
                number: 8080
          path: /api/v1/(resources)(/|$)(.*)
          pathType: Prefix
